--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
     <h1>Hello world, we are Software Developers.</h1>
-
     <div class="container">
   <header class="header">
     <h1 id="title" class="text-center">freeCodeCamp Survey Form</h1>
     <p id="description" class="description text-center">
       Thank you for taking the time to help us improve the platform
     </p>
-  </header>
+    </header>
+    </div>
   <form id="survey-form">
     <div class="form-group">
       <label id="name-label" for="name">Name</label>
@@ -28,9 +26,7 @@
         id="name"
         class="form-control"
         placeholder="Enter your name"
-        <!-- required -->
-    </div>
-    <div class="form-group">
+        required>  
       <label id="email-label" for="email">Email</label>
       <input
         type="email"
